--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
 	"workbench.colorCustomizations": {
 		"editorWhitespace.foreground": "#c8d4f5",
-		"activityBar.background": "#0f312c",
+		"activityBar.background": "#1b0f31",
 		"titleBar.activeBackground": "#030a09",
 		"titleBar.activeForeground": "#e7e7e7",
 		"activityBar.activeBackground": "#0f312c",
